--- a/css/styles.css
+++ b/css/styles.css
@@ -274,3 +274,27 @@ a:hover {
 .buty:hover {
   cursor: pointer;
 }
+
+
+
+* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #EC994B #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 18px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #EC994B;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
