--- a/css/styles.css
+++ b/css/styles.css
@@ -381,6 +381,53 @@ a:hover {
 
 
 
+.academia {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.academia span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.academia span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+
+.academia:hover {
+	background-color: #bc3409
+}
+
+.academia:hover span {
+  padding-right: 25px;
+}
+
+.academia:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
 
 
 
