--- a/css/styles.css
+++ b/css/styles.css
@@ -415,7 +415,8 @@ a:hover {
 
 
 .academia:hover {
-	background-color: #bc3409
+	background-color: #bc3409;
+	/* transform: scale(1.3); */
 }
 
 .academia:hover span {
@@ -428,7 +429,15 @@ a:hover {
 }
 
 
+/* .fa.fa-university:hover{ */
+  /* font-size:1em; */
+  /* transition: 1s ease-out; */
+/* } */
 
+
+/* .academia.fa.fa-university {  transition: font-size 0.35s ease;   } .academia.fa.fa-university:hover.fa.fa-university {  font-size: 1em;   } */ */
+
+.academia > .fa {  transition: font-size 0.35s ease;   } .academia:hover > .fa {  font-size: 1.6em;   }
 
 
 * ===== Scrollbar CSS ===== */
