--- a/css/styles.css
+++ b/css/styles.css
@@ -440,6 +440,63 @@ a:hover {
 .academia > .fa {  transition: font-size 0.35s ease;   } .academia:hover > .fa {  font-size: 1.6em;   }
 
 
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #FF8C32;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #E8630A;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
+
+
+
 * ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
